[package]
name = "near-units-macro"
version = "0.1.0"
authors = ["Willem Wyndham <wyndham@cs.unc.edu>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = {version = "=1.0.78", features = ["full", "fold", "extra-traits"] }
quote = "1.0"
near-units-core = { path = "../core"}
