[package]
name = "near-units-macro"
version = "0.1.0"
authors = ["Willem Wyndham <wyndham@cs.unc.edu>"]
edition = "2018"
license = "GPL-3.0"
categories = ["near"]
repository = "https://github.com/near/units-rs"
description = """
Macro for parsing strings literals of NEAR units.
"""

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = {version = "1", features = ["full", "fold", "extra-traits"] }
quote = "1.0"

near-units-core = { path = "../core", version = "0.1.0" }