[package]
name = "near-units"
version = "0.2.0"
authors = ["Near Inc <team@near.org>"]
edition = "2018"
license = "GPL-3.0"
categories = ["near"]
repository = "https://github.com/near/units-rs"
description = """
Rust library for parsing and displaying NEAR units.
"""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-units-core = { path = "../core", version = "0.2.0"}
near-units-macro = { path = "../macro", version = "0.2.0"}
